[package]
name = "tree-hoprs"
version = "0.1.0"
edition = "2021"
authors = ["Omar Alkersh <alkersh.omar@pm.me>"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
comfy-table = { version = "7.1.1", features = ["custom_styling"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select", "completion"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
